Fix left-alignment for contact info paragraphs

--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -15,6 +15,7 @@
 
 .contact-info p {
   margin-bottom: 3px;
+  text-align: left;
 }
 
 .contact-info {
@@ -28,6 +29,10 @@
 
   .header-right p {
     text-align: center;
+  }
+
+  .contact-info p {
+    text-align: left;
   }
 
   .header-left {
